# C-for-C-Programmers-Part-A

./: README.md
Dijkstra Algo/: CMakeLists.txt  graph.cpp  graph.h  main.cpp  output.txt  shortestPath.cpp  shortestPath.h
Dijkstra Algo/submission/: submission.cpp
Prim's Algo/: data.txt  graph.cpp  graph.h  main.cpp  prim.cpp  prim.h
Prim's Algo/submission/: submission.cpp
convert c code to c++/: main.cpp
