PROJECT(sampleCPP)

SET(execName sampleCPP)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "-D__STDC_CONSTANT_MACROS")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")

file(GLOB SRC "*.cpp")
add_executable(${execName} ${SRC})

#TARGET_LINK_LIBRARIES(${execName})
